--- a/src/pages/default/def-verify/dependencies.html
+++ b/src/pages/default/def-verify/dependencies.html
@@ -2,3 +2,4 @@
 <link rel="import" href="../../../../bower_components/paper-card/paper-card.html" />
 <link rel="import" href="../../../../bower_components/paper-button/paper-button.html" />
 <link rel="import" href="../../../../bower_components/polymerfire/firebase-auth.html" />
+<link rel="import" href="../../../../bower_components/paper-input/paper-input.html" />
