--- a/src/elements/guuey-table-row/dependencies.html
+++ b/src/elements/guuey-table-row/dependencies.html
@@ -5,4 +5,6 @@
 <link rel="import" href="../../../bower_components/paper-checkbox/paper-checkbox.html" />
 <link rel="import" href="../../../bower_components/paper-icon-button/paper-icon-button.html" />
 <link rel="import" href="../../../bower_components/iron-icons/communication-icons.html" />
+<link rel="import" href="../../../bower_components/paper-dropdown-menu/paper-dropdown-menu.html" />
+<link rel="import" href="../../../bower_components/paper-listbox/paper-listbox.html" />
 <link rel="import" href="../../../bower_components/app-storage/app-indexeddb-mirror/app-indexeddb-mirror.html" />
