--- a/src/elements/guuey-table/guuey-table.html
+++ b/src/elements/guuey-table/guuey-table.html
@@ -29,8 +29,8 @@ home(string)
     </firebase-document>
 
     <iron-media-query
-      query="(max-width:1660px)"
-      query-matches="{{query1660}}">
+      query="(max-width:1300px)"
+      query-matches="{{query1300}}">
     </iron-media-query>
     <style>
       .sectionHeading{
@@ -65,6 +65,7 @@ home(string)
         margin:20px 5% 20px 5%;
       }
       table{
+        width:100%;
         background-color:var(--table-background-color);
       }
       tbody{
@@ -79,9 +80,6 @@ home(string)
       }
       th{
         text-align:left;
-      }
-      td,th{
-
       }
       td,th{
         min-width:var(--td-th-min-width);
@@ -110,10 +108,7 @@ home(string)
           <thead>
             <tr>
               <th>[[category]]</th>
-              <th>Daily</th>
-              <th>Weekly</th>
-              <th>Bi-weekly</th>
-              <th>Monthy</th>
+              <th>Frequency</th>
               <th>Commments</th>
             </tr>
           </thead>
@@ -175,7 +170,7 @@ home(string)
         }
       },
       observers:[
-        "editQuery(query1660)"
+        "editQuery(query1300)"
       ],
       checkboxChanged:function(e){
         this.$.tableDB.path=null;
@@ -212,8 +207,8 @@ home(string)
             return returnValue;
           });
       },
-      editQuery:function(query1660){
-        if(query1660){
+      editQuery:function(query1300){
+        if(query1300){
           this.customStyle["--table-scroll-lable-color"]="inherit";
           this.customStyle["--table-overflow"]="scroll";
           this.customStyle["--tbody-display"]="block";
@@ -229,9 +224,9 @@ home(string)
           this.customStyle["--tbody-display"]="block";
           this.customStyle["--thead-tr-position"]="relative";
           this.customStyle["--thead-tr-display"]="block";
-          this.customStyle["--thead-tr-td-width"]="150px";
-          this.customStyle["--td-th-min-width"]="150px";
-          this.customStyle["--td-th-last-width"]="150px";
+          this.customStyle["--thead-tr-td-width"]="33.3%";
+          this.customStyle["--td-th-min-width"]="33.3%";
+          this.customStyle["--td-th-last-width"]="33.3%";
           this.updateStyles();
         }
       },
