--- a/src/pages/care-plan/su-medication/su-medication.html
+++ b/src/pages/care-plan/su-medication/su-medication.html
@@ -136,6 +136,14 @@
         background-color:#3d4ba8;
         color:#FFF;
       }
+      .addMedModalHeader{
+        margin-top:0 !important;
+        background-color:#673AB7;
+        color:#FFF;
+      }
+      .addMedModalHeader h2{
+        padding:15px;
+      }
       .medModalHeader h2{
         padding:15px;
       }
@@ -150,7 +158,7 @@
 
     <paper-dialog id="medModal" class="paper-time-picker-dialog">
 
-      <div class="medModalHeader">
+      <div class="addMedModalHeader">
         <h2>Add Medication</h2>
       </div>
 
